--- a/po/ru.po
+++ b/po/ru.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-30 10:26-0300\n"
 "PO-Revision-Date: 2004-03-26 20:22+0300\n"
-"Last-Translator: Eugene Rupakov <taurus@croco.net>\n"
+"Last-Translator: Eugene Rupakov <taurus_1@mail.ru>\n"
 "Language-Team: Русский <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4064,9 +4064,8 @@ msgid "Bookmark options"
 msgstr "Параметры закладок"
 
 #: ../src/preferences.c:1901
-#, fuzzy
 msgid "Sort by line number"
-msgstr "Сортировать по имени файла"
+msgstr "Сортировать по номеру строки"
 
 #: ../src/preferences.c:1902
 msgid "Make permanent by default"
