Update the translators to match what is in the About box.
yay! sourceforge finally fixed by SSH access. :-D


git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk/bluefish@1230 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/AUTHORS
+++ b/AUTHORS
@@ -21,20 +21,23 @@ Developers for previous releases:
   Antti-Juhani Kaijanaho
 
 Translators:
-  Brazilian Portuguese (PT_BR) -  Anderson Rocha <anderson@maxlinux.com.br>
-  Chinese (zh_CN) -  Ting Yang (Dormouse) <mouselinux@163.com>
-  Danish (DA) -  Rasmus Toftdahl Olesen <rto@pohldata.dk>
-  Finnish (FI) -  Juho Roukala <j.mr@luukku.com>
-  French (FR) -  Roméo Viu-Berges <apostledemencia@free.fr>
-  German (DE) -  Roland Steinbach <roland@netzblick.de>
-  Hungarian (HU) -  Péter Sáska <sasek@ccsystem.hu>
-  Italian (IT) -  Stefano Canepa <sc@linux.it>
-  Polish (PL) -  Oskar Swida <swida@aragorn.pb.bialystok.pl>
-  Portuguese (PT) - Lopo Pizarro <lopopizarro@netcabo.pt>
-  Russian (RU) -  Eugene Rupakov <rupakov@jet.msk.ru>
-  Spanish (ES) -  Walter Oscar Echarri <wecharri@infovia.com.ar>
-  Swedish (SV) -  David Smeringe <david.smeringe@telia.com>
-  Tamil (TA) -  Murugapandian Barathee <barathee@yahoo.com>
+  Brazilian Portuguese (PT_BR): Anderson Rocha <anderson@maxlinux.com.br>
+  Bulgarian (BG): 	Peio Popov <peio@peio.org>
+  Chinese (zh_CN): 	Ting Yang (Dormouse) <mouselinux@163.com>
+  Danish (DA): 		Rasmus Toftdahl Olesen <rto@pohldata.dk>
+  Finnish (FI): 	Juho Roukala <j.mr@luukku.com>
+  French (FR): 		Roméo Viu-Berges <apostledemencia@free.fr>
+  German (DE): 		Roland Steinbach <roland@netzblick.de>
+  Hungarian (HU): 	Péter Sáska <sasek@ccsystem.hu>
+  Italian (IT): 	Stefano Canepa <sc@linux.it>
+  Norwegian (NO): 	Christian Tellefsen <chris@tellefsen.net>
+  Polish (PL): 		Oskar Swida <swida@aragorn.pb.bialystok.pl>
+  Portuguese (PT): 	Lopo Pizarro <lopopizarro@netcabo.pt>
+  Russian (RU): 	Eugene Rupakov <rupakov@jet.msk.su>
+  Serbian (SR):		Marko Milenović <raven@sbb.co.yu>
+  Spanish (ES): 	Walter Oscar Echarri <wecharri@infovia.com.ar>
+  Swedish (SV): 	David Smeringe <david.smeringe@telia.com>
+  Tamil (TA): 		Murugapandian Barathee <barathee@yahoo.com>
 
 Previous translators (translations outdated):
   Bulgarian (BG):      Peio Popov <peio(at)peio.org>
