--- a/po/fr.po
+++ b/po/fr.po
@@ -4,13 +4,14 @@
 # Roméo VIU-BERGES <apostledemencia@free.fr>, 20/12/2002.
 # romeo viuberges <apostledemencia@free.fr>, 2003.
 # Romeo VIU-BERGES <romda@free.fr>, 2003.
+# Michèle Garoche <michele.garoche@easyconnect.fr>, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: 21-11-03_fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-07-14 22:48-0300\n"
-"PO-Revision-Date: 2004-07-15 03:26+0200\n"
+"PO-Revision-Date: 2004-07-21 01:53+0200\n"
 "Last-Translator: Michèle Garoche <michele.garoche@easyconnect.fr>\n"
 "Language-Team: français <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -2472,7 +2473,7 @@ msgstr "/Affichage/Afficher la barre d'outils principale"
 
 #: ../src/menu.c:376
 msgid "/View/View _HTML Toolbar"
-msgstr "//Affichage/Afficher la barre d'outils _HTML"
+msgstr "/Affichage/Afficher la barre d'outils _HTML"
 
 #: ../src/menu.c:377
 msgid "/View/View _Custom Menu"
@@ -2480,7 +2481,7 @@ msgstr "/Affichage/Afficher le menu personnalisé"
 
 #: ../src/menu.c:378
 msgid "/View/View _Left Panel"
-msgstr "//Affichage/Afficher _le panneau de gauche"
+msgstr "/Affichage/Afficher _le panneau de gauche"
 
 #: ../src/menu.c:379
 msgid "/_Tags"
