--- a/bluefish/AUTHORS
+++ b/bluefish/AUTHORS
@@ -25,7 +25,7 @@ Translators:
   Chinese (zh_CN): 	Ting Yang (Dormouse) <mouselinux@163.com>
   Danish (DA): 		Rasmus Toftdahl Olesen <rto@pohldata.dk>
   Finnish (FI): 	Juho Roukala <j.mr@luukku.com>
-  French (FR): 		Roméo Viu-Berges <apostledemencia@free.fr>
+  French (FR): 		Michèle Garoche <michele.garoche@easyconnect.fr>
   German (DE): 		Roland Steinbach <roland@netzblick.de>
   Hungarian (HU): 	Péter Sáska <sasek@ccsystem.hu>
   Italian (IT): 	Stefano Canepa <sc@linux.it>
