--- a/bluefish/po/de.po
+++ b/bluefish/po/de.po
@@ -4364,7 +4364,7 @@ msgstr "Projekt bearbeiten"
 #: ../src/project.c:430
 #, c-format
 msgid "This project contains %d files"
-msgstr "Deiese Projekt enthält %d Dateien"
+msgstr "Dieses Projekt enthält %d Dateien"
 
 #: ../src/project.c:442
 msgid "Project _Name:"
